refactor(tariffs): pull req #37 исправления по комментариям
