# src/tariff/dto/tariff.dto.ts
@@ -1,9 +1,0 @@
-import { IsNotEmpty } from 'class-validator';
-
-export class CreateTariffDto {
-  @IsNotEmpty()
-  name: string;
-
-  @IsNotEmpty()
-  price: number;
-}
