# src/tariff/dto/updateTariff.dto.ts
@@ -1,10 +1,0 @@
-import { IsOptional } from 'class-validator';
-import { CreateTariffDto } from './tariff.dto';
-
-export class UpdateTariffDto extends CreateTariffDto {
-  @IsOptional()
-  name: string;
-
-  @IsOptional()
-  price: number;
-}
